--- a/David/0_DataTables.ipynb
+++ b/David/0_DataTables.ipynb
@@ -13,6 +13,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "daa9757a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/7l/d0fjkp5s6wb4vlyfby7kw5h00000gn/T/ipykernel_2991/2074824509.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "64288a5a",
    "metadata": {},
