--- a/Karl/Linear_regression.ipynb
+++ b/Karl/Linear_regression.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "17bbe337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I should note that none of this works. Actually... zip codes that start with 06 are not in california... fml"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
-   "id": "2ca7fafe",
+   "id": "a0d6ed78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8519f7",
+   "id": "2f64c0c7",
    "metadata": {},
    "source": [
     "In this notebook we are attempting a simple OLS regression on rent prices for 2018 using 10 features I pulled from the census acs 2018 zip codes dataset. For reference, I used the query below. \n",
@@ -31,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6fd777f8",
+   "id": "89df1bc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +53,10 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "eae759ef",
-   "metadata": {},
+   "id": "87920ac7",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -295,8 +307,261 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "id": "dcb649da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geo_id</th>\n",
+       "      <th>total_pop</th>\n",
+       "      <th>white_pop</th>\n",
+       "      <th>black_pop</th>\n",
+       "      <th>asian_pop</th>\n",
+       "      <th>hispanic_pop</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_rent</th>\n",
+       "      <th>bachelors_degree_or_higher_25_64</th>\n",
+       "      <th>bachelors_degree</th>\n",
+       "      <th>mobile_homes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>06263</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>46116.0</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>06426</td>\n",
+       "      <td>3509.0</td>\n",
+       "      <td>3031.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>106991.0</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>910.0</td>\n",
+       "      <td>1067.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>06412</td>\n",
+       "      <td>4268.0</td>\n",
+       "      <td>4030.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>92417.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>819.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>06331</td>\n",
+       "      <td>5074.0</td>\n",
+       "      <td>4839.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>92835.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>514.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>06796</td>\n",
+       "      <td>931.0</td>\n",
+       "      <td>886.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91071.0</td>\n",
+       "      <td>783.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>278</th>\n",
+       "      <td>06090</td>\n",
+       "      <td>857.0</td>\n",
+       "      <td>811.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>155691.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>279</th>\n",
+       "      <td>06755</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>899.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>95143.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>280</th>\n",
+       "      <td>06390</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281</th>\n",
+       "      <td>06785</td>\n",
+       "      <td>686.0</td>\n",
+       "      <td>581.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>74773.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>06282</td>\n",
+       "      <td>1258.0</td>\n",
+       "      <td>1114.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>95174.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>182.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>283 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    geo_id  total_pop  white_pop  black_pop  asian_pop  hispanic_pop  \\\n",
+       "0    06263      251.0      241.0        0.0        0.0           0.0   \n",
+       "1    06426     3509.0     3031.0      241.0      116.0          21.0   \n",
+       "2    06412     4268.0     4030.0       19.0       82.0         137.0   \n",
+       "3    06331     5074.0     4839.0       60.0       89.0          30.0   \n",
+       "4    06796      931.0      886.0        3.0       17.0          25.0   \n",
+       "..     ...        ...        ...        ...        ...           ...   \n",
+       "278  06090      857.0      811.0        0.0        0.0          24.0   \n",
+       "279  06755     1050.0      899.0        0.0        0.0         132.0   \n",
+       "280  06390      183.0      175.0        0.0        0.0           4.0   \n",
+       "281  06785      686.0      581.0       20.0       54.0          18.0   \n",
+       "282  06282     1258.0     1114.0        0.0        0.0         144.0   \n",
+       "\n",
+       "     median_income  median_rent  bachelors_degree_or_higher_25_64  \\\n",
+       "0          46116.0        781.0                              12.0   \n",
+       "1         106991.0       1003.0                             910.0   \n",
+       "2          92417.0       1213.0                            1000.0   \n",
+       "3          92835.0        926.0                             679.0   \n",
+       "4          91071.0        783.0                             196.0   \n",
+       "..             ...          ...                               ...   \n",
+       "278       155691.0          NaN                             337.0   \n",
+       "279        95143.0          NaN                             183.0   \n",
+       "280            NaN          NaN                              50.0   \n",
+       "281        74773.0          NaN                             151.0   \n",
+       "282        95174.0          NaN                             201.0   \n",
+       "\n",
+       "     bachelors_degree  mobile_homes  \n",
+       "0                12.0           0.0  \n",
+       "1              1067.0           0.0  \n",
+       "2               819.0           0.0  \n",
+       "3               514.0           6.0  \n",
+       "4               226.0           3.0  \n",
+       "..                ...           ...  \n",
+       "278             228.0           0.0  \n",
+       "279             194.0           0.0  \n",
+       "280              36.0           4.0  \n",
+       "281             139.0           0.0  \n",
+       "282             182.0          50.0  \n",
+       "\n",
+       "[283 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feats = pd.read_csv('zip_codes_2018_5yr_10_useful_cols.csv', dtype={'geo_id': str})\n",
+    "feats"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
-   "id": "5d558b2a",
+   "id": "da856c9b",
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "40584df5",
+   "id": "465aa781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a36e210b",
+   "id": "18ab1558",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f32be586",
+   "id": "c2c2bfe2",
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f4d10f47",
+   "id": "dd7ab53a",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cce82f49",
+   "id": "cee6ae1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0d4286aa",
+   "id": "3b6e91d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4f36b98e",
+   "id": "efcffc2d",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8c13a69c",
+   "id": "b8300823",
    "metadata": {
     "scrolled": true
    },
@@ -2215,7 +2480,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e4731682",
+   "id": "0a0d0ccf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2491,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6e372387",
+   "id": "1507d424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2241,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "8158eb12",
+   "id": "85c33a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2251,7 +2516,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2d4ce6d6",
+   "id": "59ac0f22",
    "metadata": {
     "scrolled": false
    },
@@ -2285,7 +2550,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "7c4d722b",
+   "id": "dfce9201",
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4afe1d89",
+   "id": "b3634047",
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2644,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f682beea",
+   "id": "5f95b52c",
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2bc8fec1",
+   "id": "0449d6ef",
    "metadata": {},
    "outputs": [
     {
