acs_ft_select with feature engineering

--- a/Cherie/ACS_cleaning_filter_CA_metro.ipynb
+++ b/Cherie/ACS_cleaning_filter_CA_metro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 462,
    "id": "ca0c0882",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie\n"
+      "Current working directory: /Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie\n",
+      "(6112, 255)\n"
      ]
     }
    ],
@@ -28,16 +29,8 @@
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "import bamboolib\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 398,
-   "id": "15162b3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
+    "\n",
     "zori_metro = pd.read_csv(path + \"/data/Zip_Zri_AllHomesPlusMultifamily.csv\")\n",
     "ca11_18 = pd.read_csv('./data/cali_2011_2018.csv', index_col = None)\n",
     "\n",
@@ -45,36 +38,12 @@
     "ca_top5 = ['Los Angeles-Long Beach-Anaheim', 'San Francisco-Oakland-Hayward','Riverside-San Bernardino-Ontario',\\\n",
     "'Sacramento--Roseville--Arden-Arcade', 'San Diego-Carlsbad']\n",
     "ca_metro = zori_metro[zori_metro[\"Metro\"].isin(ca_top5)]\n",
-    "ca_metro_zips = ca_metro[[\"RegionName\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 399,
-   "id": "505c58a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6112, 255)\n"
-     ]
-    }
-   ],
-   "source": [
+    "ca_metro_zips = ca_metro[[\"RegionName\"]]\n",
+    "\n",
     "#filter to keep metro areas in rent index only\n",
     "metro11_18 = pd.merge(ca_metro_zips, ca11_18, on = \"RegionName\", how = \"inner\")\n",
-    "print(metro11_18.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 400,
-   "id": "4b31b645",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(metro11_18.shape)\n",
+    "\n",
     "#filter out rows that have more than 10% missing data\n",
     "perc = 10.0\n",
     "min_count = int(((100-perc)/100)*metro11_18.shape[1] + 1)\n",
@@ -91,49 +60,24 @@
     "df_cleaned = df_cleaned.drop([\"RegionID\", \"SizeRank\"], axis = 1)\n",
     "\n",
     "#changing index type and frequency\n",
-    "df_cleaned.index = pd.to_datetime(df_cleaned[\"Date\"].astype(str), format = \"%Y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 401,
-   "id": "dfa1081d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_cleaned.index = pd.to_datetime(df_cleaned[\"Date\"].astype(str), format = \"%Y\")\n",
+    "\n",
     "g = df_cleaned.groupby(\"Zipcode\")\n",
-    "df_filled0 = (g.ffill()+g.bfill())/2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 402,
-   "id": "dadc0616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_filled0 = (g.ffill()+g.bfill())/2\n",
+    "\n",
     "#merge back zipcode to fill na for first and last year observation of each zipcode\n",
     "df_filled0[\"Zipcode\"] = df_cleaned[\"Zipcode\"]\n",
     "df_filled = df_filled0.groupby(\"Zipcode\").ffill().bfill()\n",
     "\n",
     "#fill na for zipcode with no data for a variable\n",
-    "df_filled = df_filled.fillna(df_filled.mean(), axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
-   "id": "2b6934d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_filled = df_filled.fillna(df_filled.mean(), axis = 0)\n",
     "\n",
     "df_filled[\"Zipcode\"] = df_cleaned[\"Zipcode\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 440,
    "id": "fdeaf0f8",
    "metadata": {},
    "outputs": [],
@@ -143,7 +87,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 444,
+   "id": "25ff9aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d88df5b03294baf884b58a8296ec786"
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg_rent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>3135.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>3375.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>3747.083333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01</th>\n",
+       "      <td>4123.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>4520.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>1129.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01</th>\n",
+       "      <td>1186.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>1238.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>1308.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>1414.833333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5348 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               avg_rent\n",
+       "Date                   \n",
+       "2011-01-01  3135.416667\n",
+       "2012-01-01  3375.500000\n",
+       "2013-01-01  3747.083333\n",
+       "2014-01-01  4123.250000\n",
+       "2015-01-01  4520.250000\n",
+       "...                 ...\n",
+       "2013-01-01  1129.454545\n",
+       "2014-01-01  1186.333333\n",
+       "2015-01-01  1238.666667\n",
+       "2016-01-01  1308.666667\n",
+       "2017-01-01  1414.833333\n",
+       "\n",
+       "[5348 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "target_train = target_train.reset_index()\n",
+    "target_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 449,
    "id": "65f4be7a",
    "metadata": {},
    "outputs": [],
@@ -154,14 +212,139 @@
     "feature_train =  features[features[\"Date\"] != 2018]\n",
     "features_test = features[features[\"Date\"] == 2018]\n",
     "\n",
-    "target_train = target[target[\"Date\"] != 2018].drop([\"Date\"], axis = 1)\n",
-    "target_test = target[target[\"Date\"] == 2018].drop([\"Date\"], axis = 1)\n",
+    "target_train = target[target[\"Date\"] != 2018]\n",
+    "target_test = target[target[\"Date\"] == 2018]\n",
     "\n",
-    "feature_train.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/feature_train.csv\")\n",
-    "feature_test.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/feature_test.csv\")\n",
-    "target_train.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/target_train.csv\")\n",
-    "target_test.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/target_test.csv\")"
+    "\n",
+    "# feature_train.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/feature_train.csv\")\n",
+    "# feature_test.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/feature_test.csv\")\n",
+    "# target_train.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/target_train.csv\")\n",
+    "# target_test.to_csv(\"/Users/chereowang27/NYCDSA/Capstone/NYCDSA_Capstone/Cherie/data/target_test.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "id": "7de5cb16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9d58021ed164379b5ffb36757d6700d"
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>avg_rent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>3135.416667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>3375.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>3747.083333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01</th>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>4123.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>4520.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1129.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01</th>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>1186.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-01-01</th>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>1238.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>1308.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>1414.833333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5348 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Date     avg_rent\n",
+       "Date                           \n",
+       "2011-01-01  2011.0  3135.416667\n",
+       "2012-01-01  2012.0  3375.500000\n",
+       "2013-01-01  2013.0  3747.083333\n",
+       "2014-01-01  2014.0  4123.250000\n",
+       "2015-01-01  2015.0  4520.250000\n",
+       "...            ...          ...\n",
+       "2013-01-01  2013.0  1129.454545\n",
+       "2014-01-01  2014.0  1186.333333\n",
+       "2015-01-01  2015.0  1238.666667\n",
+       "2016-01-01  2016.0  1308.666667\n",
+       "2017-01-01  2017.0  1414.833333\n",
+       "\n",
+       "[5348 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
