IRS_eda1 and clustering

--- a/Cherie/income_clusters.ipynb
+++ b/Cherie/income_clusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7e457357",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
     "plt.style.use('ggplot')\n",
     "%matplotlib inline\n",
     "\n",
-    "df = pd.read_csv('./data/cali_2011_2018.csv', index_col = None)\n",
+    "df = pd.read_csv('./data/metro_CA_2011_2018_lagged_new.csv', index_col = None)\n",
     "df2 = df.dropna()\n",
     "X = df2[['income_per_capita', 'gini_index']]\n",
     "\n",
