Final dataset validation

--- a/Karl/2011_acs_model_building.ipynb
+++ b/Karl/2011_acs_model_building.ipynb
@@ -668,8 +668,7 @@
     "for each in R2_lasso.columns:\n",
     "    ax2.plot(R2_lasso.index, R2_lasso[each], label=each)\n",
     "ax2.set_xlabel(r'hyperparameter $\\lambda$')\n",
-    "ax2.legend(loc=1)\n",
-    "# Takes forever. And still doesn't converge even with max_iter=10000"
+    "ax2.legend(loc=1)"
    ]
   },
   {
