--- a/Cherie/irs_eda1.ipynb
+++ b/Cherie/irs_eda1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "id": "d178a179",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "id": "3a12c8e5",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "id": "ded4a08d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "id": "c7c397a7",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "Length: 177, dtype: bool"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "id": "6d2c3238",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "id": "05562eb7",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "[1012428 rows x 8 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "id": "3e3ad1c0",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "id": "e837b373",
    "metadata": {},
    "outputs": [],
@@ -395,159 +395,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "id": "ecd9744d",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>agi_stub</th>\n",
-       "      <th>zipcode</th>\n",
-       "      <th>N_returns_real_estate_taxes</th>\n",
-       "      <th>Real_estate_taxes_amount</th>\n",
-       "      <th>N_returns_mortgage_interest_paid</th>\n",
-       "      <th>Mortgage_interest_paid_amount</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>94109</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>864.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>812.0</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>94109</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>1243.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>1262.0</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>94109</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>1879.0</td>\n",
-       "      <td>220.0</td>\n",
-       "      <td>2123.0</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>94109</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>2940.0</td>\n",
-       "      <td>290.0</td>\n",
-       "      <td>2721.0</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>94109</td>\n",
-       "      <td>1340.0</td>\n",
-       "      <td>11176.0</td>\n",
-       "      <td>990.0</td>\n",
-       "      <td>12312.0</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            City State STATE  agi_stub  zipcode  N_returns_real_estate_taxes  \\\n",
-       "0  San Francisco    CA    CA       1.0    94109                        130.0   \n",
-       "1  San Francisco    CA    CA       2.0    94109                        200.0   \n",
-       "2  San Francisco    CA    CA       3.0    94109                        300.0   \n",
-       "3  San Francisco    CA    CA       4.0    94109                        400.0   \n",
-       "4  San Francisco    CA    CA       5.0    94109                       1340.0   \n",
-       "\n",
-       "   Real_estate_taxes_amount  N_returns_mortgage_interest_paid  \\\n",
-       "0                     864.0                              80.0   \n",
-       "1                    1243.0                             130.0   \n",
-       "2                    1879.0                             220.0   \n",
-       "3                    2940.0                             290.0   \n",
-       "4                   11176.0                             990.0   \n",
-       "\n",
-       "   Mortgage_interest_paid_amount  year  \n",
-       "0                          812.0  2017  \n",
-       "1                         1262.0  2017  \n",
-       "2                         2123.0  2017  \n",
-       "3                         2721.0  2017  \n",
-       "4                        12312.0  2017  "
+       "0        1.0\n",
+       "1        2.0\n",
+       "2        3.0\n",
+       "3        4.0\n",
+       "4        5.0\n",
+       "        ... \n",
+       "27139    2.0\n",
+       "27140    3.0\n",
+       "27141    4.0\n",
+       "27142    5.0\n",
+       "27143    6.0\n",
+       "Name: agi_stub, Length: 27144, dtype: float64"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metro_ca_tax.head()"
+    "metro_ca_tax.agi_stub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "id": "ffbe3671",
    "metadata": {},
    "outputs": [],
    "source": [
     "g = metro_ca_tax.groupby([\"year\",\"zipcode\"])\n",
-    "metro_ca_tax_zipcode = g.sum().reset_index()"
+    "metro_ca_tax_zipcode = g.sum().reset_index() \\\n",
+    "                              .drop([\"agi_stub\"], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 12,
    "id": "bc76b563",
    "metadata": {},
    "outputs": [
@@ -574,7 +466,6 @@
        "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>zipcode</th>\n",
-       "      <th>agi_stub</th>\n",
        "      <th>N_returns_real_estate_taxes</th>\n",
        "      <th>Real_estate_taxes_amount</th>\n",
        "      <th>N_returns_mortgage_interest_paid</th>\n",
@@ -586,7 +477,6 @@
        "      <th>0</th>\n",
        "      <td>2013</td>\n",
        "      <td>90001</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>1910.0</td>\n",
        "      <td>5712.0</td>\n",
        "      <td>1900.0</td>\n",
@@ -596,7 +486,6 @@
        "      <th>1</th>\n",
        "      <td>2013</td>\n",
        "      <td>90002</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>2070.0</td>\n",
        "      <td>5698.0</td>\n",
        "      <td>2100.0</td>\n",
@@ -606,7 +495,6 @@
        "      <th>2</th>\n",
        "      <td>2013</td>\n",
        "      <td>90003</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>2250.0</td>\n",
        "      <td>6165.0</td>\n",
        "      <td>2290.0</td>\n",
@@ -616,7 +504,6 @@
        "      <th>3</th>\n",
        "      <td>2013</td>\n",
        "      <td>90004</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>2910.0</td>\n",
        "      <td>25109.0</td>\n",
        "      <td>2560.0</td>\n",
@@ -626,7 +513,6 @@
        "      <th>4</th>\n",
        "      <td>2013</td>\n",
        "      <td>90005</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>1060.0</td>\n",
        "      <td>8951.0</td>\n",
        "      <td>980.0</td>\n",
@@ -640,13 +526,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4519</th>\n",
        "      <td>2018</td>\n",
        "      <td>95842</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>890.0</td>\n",
        "      <td>2472.0</td>\n",
        "      <td>850.0</td>\n",
@@ -656,7 +540,6 @@
        "      <th>4520</th>\n",
        "      <td>2018</td>\n",
        "      <td>95843</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>2540.0</td>\n",
        "      <td>10746.0</td>\n",
        "      <td>2480.0</td>\n",
@@ -666,7 +549,6 @@
        "      <th>4521</th>\n",
        "      <td>2018</td>\n",
        "      <td>95864</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>3080.0</td>\n",
        "      <td>22955.0</td>\n",
        "      <td>2730.0</td>\n",
@@ -676,7 +558,6 @@
        "      <th>4522</th>\n",
        "      <td>2018</td>\n",
        "      <td>96146</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>120.0</td>\n",
        "      <td>1100.0</td>\n",
        "      <td>120.0</td>\n",
@@ -686,7 +567,6 @@
        "      <th>4523</th>\n",
        "      <td>2018</td>\n",
        "      <td>96150</td>\n",
-       "      <td>21.0</td>\n",
        "      <td>1120.0</td>\n",
        "      <td>5528.0</td>\n",
        "      <td>1040.0</td>\n",
@@ -694,53 +574,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4524 rows × 7 columns</p>\n",
+       "<p>4524 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      year  zipcode  agi_stub  N_returns_real_estate_taxes  \\\n",
-       "0     2013    90001      21.0                       1910.0   \n",
-       "1     2013    90002      21.0                       2070.0   \n",
-       "2     2013    90003      21.0                       2250.0   \n",
-       "3     2013    90004      21.0                       2910.0   \n",
-       "4     2013    90005      21.0                       1060.0   \n",
-       "...    ...      ...       ...                          ...   \n",
-       "4519  2018    95842      21.0                        890.0   \n",
-       "4520  2018    95843      21.0                       2540.0   \n",
-       "4521  2018    95864      21.0                       3080.0   \n",
-       "4522  2018    96146      21.0                        120.0   \n",
-       "4523  2018    96150      21.0                       1120.0   \n",
+       "      year  zipcode  N_returns_real_estate_taxes  Real_estate_taxes_amount  \\\n",
+       "0     2013    90001                       1910.0                    5712.0   \n",
+       "1     2013    90002                       2070.0                    5698.0   \n",
+       "2     2013    90003                       2250.0                    6165.0   \n",
+       "3     2013    90004                       2910.0                   25109.0   \n",
+       "4     2013    90005                       1060.0                    8951.0   \n",
+       "...    ...      ...                          ...                       ...   \n",
+       "4519  2018    95842                        890.0                    2472.0   \n",
+       "4520  2018    95843                       2540.0                   10746.0   \n",
+       "4521  2018    95864                       3080.0                   22955.0   \n",
+       "4522  2018    96146                        120.0                    1100.0   \n",
+       "4523  2018    96150                       1120.0                    5528.0   \n",
        "\n",
-       "      Real_estate_taxes_amount  N_returns_mortgage_interest_paid  \\\n",
-       "0                       5712.0                            1900.0   \n",
-       "1                       5698.0                            2100.0   \n",
-       "2                       6165.0                            2290.0   \n",
-       "3                      25109.0                            2560.0   \n",
-       "4                       8951.0                             980.0   \n",
-       "...                        ...                               ...   \n",
-       "4519                    2472.0                             850.0   \n",
-       "4520                   10746.0                            2480.0   \n",
-       "4521                   22955.0                            2730.0   \n",
-       "4522                    1100.0                             120.0   \n",
-       "4523                    5528.0                            1040.0   \n",
+       "      N_returns_mortgage_interest_paid  Mortgage_interest_paid_amount  \n",
+       "0                               1900.0                        17162.0  \n",
+       "1                               2100.0                        18397.0  \n",
+       "2                               2290.0                        21225.0  \n",
+       "3                               2560.0                        45167.0  \n",
+       "4                                980.0                        16705.0  \n",
+       "...                                ...                            ...  \n",
+       "4519                             850.0                         7627.0  \n",
+       "4520                            2480.0                        26612.0  \n",
+       "4521                            2730.0                        44128.0  \n",
+       "4522                             120.0                         1800.0  \n",
+       "4523                            1040.0                        14328.0  \n",
        "\n",
-       "      Mortgage_interest_paid_amount  \n",
-       "0                           17162.0  \n",
-       "1                           18397.0  \n",
-       "2                           21225.0  \n",
-       "3                           45167.0  \n",
-       "4                           16705.0  \n",
-       "...                             ...  \n",
-       "4519                         7627.0  \n",
-       "4520                        26612.0  \n",
-       "4521                        44128.0  \n",
-       "4522                         1800.0  \n",
-       "4523                        14328.0  \n",
-       "\n",
-       "[4524 rows x 7 columns]"
+       "[4524 rows x 6 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,13 +618,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "id": "b6aeb677",
    "metadata": {},
    "outputs": [],
    "source": [
     "#write to local folder\n",
-    "metro_ca_tax_zipcode.to_csv(\"./data/soi_ca_allzips.csv\")"
+    "metro_ca_tax_zipcode.to_csv(\"./data/metro_CA_tax.csv\")"
    ]
   },
   {
